update board endpoint
